--- a/30 Day of ML/day3_data_preprocessing.ipynb
+++ b/30 Day of ML/day3_data_preprocessing.ipynb
@@ -195,6 +195,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data Prepocessing\n",
+    "\n",
+    "1. **Handling Missing Data** \n",
+    "2. **Removing Duplicates**\n",
+    "3. **Feature Scaling**\n",
+    "4. **Encoding Categorical Data**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1️⃣ Handling Missing Data"
    ]
   },
