--- a/30 Day of ML/day3_data_preprocessing.ipynb
+++ b/30 Day of ML/day3_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b200b3a7-b881-46de-bfb2-23167bf6a090",
+       "ref": "f97e0292-c434-4dd0-9183-50f1008b2f54",
        "rows": [
         [
          "0",
@@ -181,7 +181,7 @@
        "4      Eve   NaN  90000.0  Los Angeles"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,33 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_8304\\2837901566.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Age\"].fillna(df[\"Age\"].mean(), inplace=True)  # Replace NaN with mean\n",
-      "C:\\Users\\Lenovo\\AppData\\Local\\Temp\\ipykernel_8304\\2837901566.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Salary\"].fillna(df[\"Salary\"].median(), inplace=True)  # Replace NaN with median\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[\"Age\"].fillna(df[\"Age\"].mean(), inplace=True)  # Replace NaN with mean\n",
-    "df[\"Salary\"].fillna(df[\"Salary\"].median(), inplace=True)  # Replace NaN with median\n"
+    "# df[\"Age\"].fillna(df[\"Age\"].mean(), inplace=True)  # Replace NaN with mean\n",
+    "# df[\"Salary\"].fillna(df[\"Salary\"].median(), inplace=True)  # Replace NaN with median\n",
+    "\n",
+    "df[\"Age\"] = df[\"Age\"].fillna(df[\"Age\"].mean())\n",
+    "df[\"Salary\"] = df[\"Salary\"].fillna(df[\"Salary\"].median())\n",
+    "\n"
    ]
   },
   {
@@ -250,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +294,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "23242cdf-31ad-431b-a19c-0a6f706fde05",
+       "ref": "a3c8c80c-9553-4368-ba27-5215455cf5a7",
        "rows": [
         [
          "0",
@@ -428,7 +411,7 @@
        "4      Eve  0.5  1.0000  Los Angeles"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
