--- a/30 Day of ML/day1_intro.ipynb
+++ b/30 Day of ML/day1_intro.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📌 Day 1: Introduction to Machine Learning  \n",
+    "**Machine Learning (ML)** is a field of Artificial Intelligence that enables computers to learn from data without being explicitly programmed.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
