--- a/30 Day of ML/day2_libraries.ipynb
+++ b/30 Day of ML/day2_libraries.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📌 Day 2: Essential Python Libraries for ML  \n",
+    "\n",
+    "## Libraries Covered  \n",
+    "✅ **NumPy** – Numerical computations  \n",
+    "✅ **Pandas** – Data manipulation  \n",
+    "✅ **Matplotlib & Seaborn** – Data visualization  \n",
+    "✅ **Scikit-Learn** – ML model training  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
