--- a/30 Day of ML/day3_data_preprocessing.ipynb
+++ b/30 Day of ML/day3_data_preprocessing.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📌 Day 3: Data Preprocessing & Cleaning in ML  \n",
+    "\n",
+    "## Why is Data Preprocessing Important?  \n",
+    "Raw data can be messy, so we need to clean and transform it before using it in ML models.  \n",
+    "\n",
+    "## Key Steps Covered  \n",
+    "✅ Handling Missing Data  \n",
+    "✅ Removing Duplicates  \n",
+    "✅ Feature Scaling (Standardization, Min-Max Scaling)  \n",
+    "✅ Encoding Categorical Data  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -460,6 +476,13 @@
    "source": [
     "print(\"Processed Data:\\n\", df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
