--- a/30 Day of ML/day4_exploratory_data_analysis.ipynb
+++ b/30 Day of ML/day4_exploratory_data_analysis.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📌 Day 4: Exploratory Data Analysis (EDA)  \n",
+    "\n",
+    "## Why is EDA Important?  \n",
+    "EDA helps us understand patterns in data before applying ML models.  \n",
+    "\n",
+    "## Key EDA Techniques Covered  \n",
+    "✅ Summary Statistics (`describe()`, `info()`)  \n",
+    "✅ Handling Missing Values (`isnull()`, `fillna()`)  \n",
+    "✅ Data Visualization (Histograms, Boxplots, Correlation Heatmaps)  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
