--- a/30 Day of ML/day8_Train_Test_splitting_&_cross_validation.ipynb
+++ b/30 Day of ML/day8_Train_Test_splitting_&_cross_validation.ipynb
@@ -611,17 +611,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold,cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,10 +632,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# K-Fold Cross Validation (k=5)\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores = cross_val_score(model, X, y, cv=kf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation scores: [0.6  0.6  0.45 0.6  0.6 ]\n",
+      "Mean accuracy: 0.5700\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validation scores: {cv_scores}\")\n",
+    "print(f\"Mean accuracy: {cv_scores.mean():.4f}\")"
+   ]
   }
  ],
  "metadata": {
