--- a/30 Day of ML/day12_Polynomial Regression.ipynb
+++ b/30 Day of ML/day12_Polynomial Regression.ipynb
@@ -4,6 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 📊 𝐃𝐚𝐲 𝟏𝟐: 𝐏𝐨𝐥𝐲𝐧𝐨𝐦𝐢𝐚𝐥 𝐑𝐞𝐠𝐫𝐞𝐬𝐬𝐢𝐨𝐧 – 𝐖𝐡𝐞𝐧 𝐭𝐨 𝐔𝐬𝐞 & 𝐇𝐨𝐰 𝐈𝐭 𝐖𝐨𝐫𝐤𝐬 | 𝟑𝟎-𝐃𝐚𝐲 𝐌𝐋 𝐂𝐡𝐚𝐥𝐥𝐞𝐧𝐠𝐞\n",
+    "\n",
+    "\n",
+    "\n",
+    " Today, let's dive into Polynomial Regression — a powerful method for handling non-linear relationships in data.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## ✅ 𝐖𝐡𝐚𝐭 𝐢𝐬 𝐏𝐨𝐥𝐲𝐧𝐨𝐦𝐢𝐚𝐥 𝐑𝐞𝐠𝐫𝐞𝐬𝐬𝐢𝐨𝐧?\n",
+    "\n",
+    "Polynomial Regression is an extension of Linear Regression that models the relationship between independent and dependent variables as an nth-degree polynomial.\n",
+    "\n",
+    "It is used when linear models fail to capture complex patterns in data.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## 🔑 𝐖𝐡𝐞𝐧 𝐭𝐨 𝐔𝐬𝐞 𝐏𝐨𝐥𝐲𝐧𝐨𝐦𝐢𝐚𝐥 𝐑𝐞𝐠𝐫𝐞𝐬𝐬𝐢𝐨𝐧?\n",
+    "\n",
+    " ✅ When the relationship between variables is non-linear.\n",
+    "\n",
+    " ✅ When residual plots of linear regression show patterns (sign of underfitting).\n",
+    "\n",
+    " ✅ To model complex curves and trends in the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ✅ Step 1: Import Libraries"
    ]
   },
