--- a/30 Day of ML/day12_Polynomial Regression.ipynb
+++ b/30 Day of ML/day12_Polynomial Regression.ipynb
@@ -26,7 +26,24 @@
     "\n",
     " ✅ When residual plots of linear regression show patterns (sign of underfitting).\n",
     "\n",
-    " ✅ To model complex curves and trends in the data."
+    " ✅ To model complex curves and trends in the data.\n",
+    "\n",
+    "\n",
+    "## 📊 𝐊𝐞𝐲 𝐈𝐧𝐬𝐢𝐠𝐡𝐭𝐬\n",
+    "\n",
+    " ⚙️ Polynomial Regression captures non-linear patterns effectively.\n",
+    "\n",
+    " ⚙️ Degree selection is crucial — too low: underfitting, too high: overfitting.\n",
+    "\n",
+    " ⚙️ Always compare with Linear Regression to assess improvement.\n",
+    "\n",
+    " ⚙️ Check R² Score (closer to 1 is better) and MSE (lower is better) to evaluate fit.\n",
+    "\n",
+    "\n",
+    "\n",
+    " ✅ Polynomial Regression is essential for curved patterns where linear models fail.\n",
+    "\n",
+    " ✅ Balance between model complexity and performance is key — use visualization and metrics to choose degree."
    ]
   },
   {
