--- a/30 Day of ML/day14_Model Evaluation Metrics.ipynb
+++ b/30 Day of ML/day14_Model Evaluation Metrics.ipynb
@@ -70,6 +70,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 📄 regression_metrics (MAE, MSE, RMSE, R²)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📄 classification_metrics (Accuracy, Precision, Recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
