--- a/30 Day of ML/day14_Model Evaluation Metrics.ipynb
+++ b/30 Day of ML/day14_Model Evaluation Metrics.ipynb
@@ -76,10 +76,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Regression metrics Example\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example actual and predicted values\n",
+    "y_true = np.array([3, -0.5, 2, 7])\n",
+    "y_pred = np.array([2.5, 0.0, 2, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate metrics\n",
+    "mae = mean_absolute_error(y_true, y_pred)\n",
+    "mse = mean_squared_error(y_true, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error [MAE]: 0.500\n",
+      "Mean Squared Error [MSE]: 0.375\n",
+      "Root Mean Squared Error [RMSE]: 0.612\n",
+      "R² Score: 0.949\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Mean Absolute Error [MAE]: {mae:.3f}')\n",
+    "print(f'Mean Squared Error [MSE]: {mse:.3f}')\n",
+    "print(f'Root Mean Squared Error [RMSE]: {rmse:.3f}')\n",
+    "print(f\"R² Score: {r2:.3f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,8 +149,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
