--- a/30 Day of ML/day14_Model Evaluation Metrics.ipynb
+++ b/30 Day of ML/day14_Model Evaluation Metrics.ipynb
@@ -142,6 +142,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classification metrics Example\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example actual and predicted labels\n",
+    "y_true_cls = [0, 1, 1, 0, 1, 1, 0, 1, 0, 0]\n",
+    "y_pred_cls = [0, 1, 0, 0, 1, 1, 0, 1, 1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(y_true_cls, y_pred_cls)\n",
+    "precision = precision_score(y_true_cls, y_pred_cls)\n",
+    "recall = recall_score(y_true_cls, y_pred_cls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.800\n",
+      "Precision: 0.800\n",
+      "Recall: 0.800\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Accuracy: {accuracy:.3f}')\n",
+    "print(f'Precision: {precision:.3f}')\n",
+    "print(f'Recall: {recall:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
