--- a/30 Day of ML/day17_Support Vector Machines.ipynb
+++ b/30 Day of ML/day17_Support Vector Machines.ipynb
@@ -35,6 +35,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📄 svm classification\n",
+    "\n",
+    "## 🔷 Support Vector Classifier\n",
+    "\n",
+    "### ✅ Steps:\n",
+    "1. Import Libraries\n",
+    "2. Load Dataset (Iris dataset for multi-class classification)\n",
+    "3. Data Splitting (Train & Test)\n",
+    "4. Model Initialization & Training (SVC)\n",
+    "5. Prediction & Evaluation (Accuracy, Classification Report)\n",
+    "6. Visualization (Decision Boundary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📄 svm_regression.ipynb\n",
+    "## 🔷 Support Vector Regression Example\n",
+    "### ✅ Steps:\n",
+    "1. Import Libraries\n",
+    "2. Load Dataset (California Housing / Synthetic Data)\n",
+    "3. Data Splitting (Train & Test)\n",
+    "4. Model Initialization & Training (SVR)\n",
+    "5. Prediction & Evaluation (MSE, R² Score)\n",
+    "6. Visualization (Optional)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
