--- a/30 Day of ML/day24_Principal Component Analysis.ipynb
+++ b/30 Day of ML/day24_Principal Component Analysis.ipynb
@@ -53,14 +53,59 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import numpy as np  \n",
+    "import matplotlib.pyplot as plt  \n",
+    "import seaborn as sns  \n",
+    "from sklearn.decomposition import PCA  \n",
+    "from sklearn.datasets import load_digits  \n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset (Handwritten Digits)\n",
+    "digits = load_digits()  \n",
+    "X, y = digits.data, digits.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize the data  \n",
+    "scaler = StandardScaler()  \n",
+    "X_scaled = scaler.fit_transform(X) "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
