--- a/30 Day of ML/day30_Project.ipynb
+++ b/30 Day of ML/day30_Project.ipynb
@@ -188,10 +188,19 @@
     "\n",
     "✔️ This will create:\n",
     "\n",
-    "  - churn_model.pkl (Trained model)\n",
+    "   - churn_model.pkl (Trained model)\n",
     "\n",
-    " - scaler.pkl (Scaler for normalization)\n",
+    "   - scaler.pkl (Scaler for normalization)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python train_model.py"
    ]
   },
   {
@@ -204,6 +213,15 @@
     "- streamlit run app.py\n",
     "\n",
     "✔️ This will open a web interface where you can enter customer details and predict churn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!streamlit run app.py"
    ]
   },
   {
